Allow using released or dev dns-release in brats
[#150346531](https://www.pivotaltracker.com/story/show/150346531)

Signed-off-by: Alton Fong <altonf@vmware.com>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
@@ -38,7 +38,7 @@ instance_groups:
 
 releases:
 - name: bosh-dns
-  version: create
+  version: latest
   url: file://((dns-release-path))
 - name: linked-template-release
   version: create
