--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -782,10 +782,9 @@ resources:
       region_name: {{bosh_cli_aws_s3_release_bucket_region}}
 
   - name: dns-release
-    type: git
+    type: bosh-io-release
     source:
-      uri: https://github.com/cloudfoundry/dns-release
-      branch: master
+      repository: cloudfoundry/dns-release
 
   #
   # BATS
