--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -657,6 +657,7 @@ jobs:
         - {put: environment, params: {release: environment}}
 
   - name: brats-ubuntu
+    serial: true
     plan:
     - do:
       - aggregate:
