--- a/ci/tasks/test-brats.yml
+++ b/ci/tasks/test-brats.yml
@@ -8,7 +8,7 @@ image_resource:
 
 inputs:
   - name: bosh-src
-  - name: dns-release
+  - name: bosh-dns-release
   - name: candidate-warden-ubuntu-stemcell
   - name: bosh-release
 
