Updating pipeline to run only one BRATS at a time
[#150983022 - BRATS tests run serially](https://www.pivotaltracker.com/story/show/150983022)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -693,6 +693,7 @@ jobs:
         - {put: environment, params: {release: environment}}
 
   - name: brats-ubuntu
+    serial: true
     plan:
     - do:
       - aggregate:
