Updating pipeline to run only one BRATS at a time
[#150983022 - BRATS tests run serially](https://www.pivotaltracker.com/story/show/150983022)

--- a/ci/pipeline-nats-tls.yml
+++ b/ci/pipeline-nats-tls.yml
@@ -659,6 +659,7 @@ jobs:
       - {put: environment, params: {release: environment}}
 
 - name: brats-ubuntu
+  serial: true
   plan:
   - do:
     - aggregate:
