--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -915,6 +915,10 @@ builds:
     version: bc510ba7bd5dc492aefd3aee7f0af32461f65e5d
     blobstore_id: ada3d677-dd14-4c6d-914c-d0087f505a23
     sha1: 1ec3875a42c01e98eb17a6ff21ad324b0196ab87
+  bcbcd57fd903a7fd865545866f12e9352c2fb32f:
+    version: bcbcd57fd903a7fd865545866f12e9352c2fb32f
+    blobstore_id: 059bfc06-3981-42d6-4483-dc9de79a6e69
+    sha1: 6a105b933ca744ef90f864a167193e2eb510e5cb
   bcd0e222d12530f5ac2bdb57941e613e7d916fba:
     version: bcd0e222d12530f5ac2bdb57941e613e7d916fba
     blobstore_id: ceb7e044-b241-4454-b2ea-426137a92d7e
