--- a/releases/index.yml
+++ b/releases/index.yml
@@ -49,6 +49,8 @@ builds:
     version: "82"
   19200fec012800c5725bf021e47c2ce8baa784f1:
     version: "39"
+  19b323d7-7e06-42b9-6c81-763dec1d4f46:
+    version: 263.2.0
   19e85380-7867-4ad3-a222-fc973f414762:
     version: "255.5"
   1abbb9d95dd0121a238e319580cda00dcc9d6e82:
