--- a/ci/pipeline-nats-tls.yml
+++ b/ci/pipeline-nats-tls.yml
@@ -666,7 +666,7 @@ jobs:
       - get: bosh-src
         passed:
         - candidate-release
-      - get: dns-release
+      - get: bosh-dns-release
       - get: warden-ubuntu-trusty
       - get: bosh-release
         resource: bosh-candidate-release-tarballs
@@ -831,10 +831,10 @@ resources:
     uri: https://github.com/cloudfoundry/bosh-acceptance-tests.git
     branch: gocli-bats
 
-- name: dns-release
+- name: bosh-dns-release
   type: git
   source:
-    uri: https://github.com/cloudfoundry/dns-release
+    uri: https://github.com/cloudfoundry/bosh-dns-release
     branch: master
 
 - name: cpi-release
