--- a/ci/pipelines/stemcells/tasks/publish.yml
+++ b/ci/pipelines/stemcells/tasks/publish.yml
@@ -4,13 +4,16 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: boshcpi/aws-cpi-release
+    repository: bosh/os-image-stemcell-publisher
 
 inputs:
   - name: bosh-src
   - name: version
+  - name: stemcells-index
 outputs:
   - name: version-tag
+  - name: stemcells-index
+    path: stemcells-index-output
 
 run:
   path: bosh-src/ci/pipelines/stemcells/tasks/publish.sh
@@ -22,3 +25,5 @@ params:
   CANDIDATE_BUCKET_NAME: required
   PUBLISHED_BUCKET_NAME: required
   COPY_KEYS:             required
+  OS_NAME:               required
+  OS_VERSION:            required
