Change nats-pipeline to reflect brats changes
[#150607587](https://www.pivotaltracker.com/story/show/150607587)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/pipeline-nats-tls.yml
+++ b/ci/pipeline-nats-tls.yml
@@ -832,10 +832,9 @@ resources:
     branch: gocli-bats
 
 - name: bosh-dns-release
-  type: git
+  type: bosh-io-release
   source:
-    uri: https://github.com/cloudfoundry/bosh-dns-release
-    branch: master
+    repository: cloudfoundry/dns-release
 
 - name: cpi-release
   type: bosh-io-release
