Change nats-tls brats to run on their own worker.
Signed-off-by: Nader Ziada <nziada@pivotal.io>

--- a/ci/pipeline-nats-tls.yml
+++ b/ci/pipeline-nats-tls.yml
@@ -558,7 +558,7 @@ jobs:
           - candidate-release
     - task: test-brats
       file: bosh-src/ci/tasks/test-brats.yml
-      tags: ["worker-brats"]
+      tags: ["worker-gonats"]
       privileged: true
       input_mapping:
         candidate-warden-ubuntu-stemcell: warden-ubuntu-trusty
