--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -286,15 +286,16 @@ jobs:
           s3_region: ((blobstore_client_aws_s3_region))
           s3_host: ((blobstore_client_aws_s3_host))
           run_aws_tests: "Not null"
-      - task: test-local
-        file: bosh-src/ci/tasks/test-local-blobstore-client-integration.yml
-      - task: test-dav
-        file: bosh-src/ci/tasks/test-dav-blobstore-client-integration.yml
-      - task: test-gcs
-        file: bosh-src/ci/tasks/test-gcs-blobstore-client-integration.yml
-        params:
-          google_project: ((blobstore_client_google_project))
-          google_json_key_data: ((blobstore_client_google_json_key_data))
+      - aggregate:
+        - task: test-local
+          file: bosh-src/ci/tasks/test-local-blobstore-client-integration.yml
+        - task: test-dav
+          file: bosh-src/ci/tasks/test-dav-blobstore-client-integration.yml
+        - task: test-gcs
+          file: bosh-src/ci/tasks/test-gcs-blobstore-client-integration.yml
+          params:
+            google_project: ((blobstore_client_google_project))
+            google_json_key_data: ((blobstore_client_google_json_key_data))
 
   - name: blobstore-performance
     public: true
