--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,6 +19,7 @@ groups:
       - bats-centos
       - bats-ubuntu
       - brats-ubuntu
+      - brats-ubuntu-non-tls-agent
       - upgrade-tests
       - blobstore-performance
 
@@ -677,7 +678,29 @@ jobs:
         tags: ["worker-brats"]
         privileged: true
         input_mapping:
-          bosh-dev-release: bosh-release
+          candidate-warden-ubuntu-stemcell: stemcell
+
+  - name: brats-ubuntu-non-tls-agent
+    serial: true
+    plan:
+    - do:
+      - aggregate:
+        - get: bosh-src
+          passed:
+          - candidate-release
+        - get: bosh-dns-release
+        - get: warden-ubuntu-trusty-3445-11
+        - get: bosh-release
+          resource: bosh-candidate-release-tarballs
+          trigger: true
+          passed:
+            - candidate-release
+      - task: test-brats
+        file: bosh-src/ci/tasks/test-brats.yml
+        tags: ["worker-brats"]
+        privileged: true
+        input_mapping:
+          warden-ubuntu-trusty-3445-11: stemcell
 
   - name: finalize-bosh-release
     serial: true
@@ -822,6 +845,12 @@ resources:
     source:
       bucket: bosh-core-stemcells-candidate
       regexp: warden/bosh-stemcell-(.+)-warden-boshlite-ubuntu-trusty-go_agent.tgz
+
+  - name: warden-ubuntu-trusty-3445-11
+    type: bosh-io-stemcell
+    source:
+      name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+      version_family: "3445.11"
 
   - name: warden-ubuntu-trusty
     type: bosh-io-stemcell
