input mapping was the wrong direction, whoops
[#152009993](https://www.pivotaltracker.com/story/show/152009993)

Signed-off-by: Zachary Gershman <zgershman@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -678,7 +678,7 @@ jobs:
         tags: ["worker-brats"]
         privileged: true
         input_mapping:
-          candidate-warden-ubuntu-stemcell: stemcell
+          stemcell: candidate-warden-ubuntu-stemcell
 
   - name: brats-ubuntu-non-tls-agent
     serial: true
@@ -700,7 +700,7 @@ jobs:
         tags: ["worker-brats"]
         privileged: true
         input_mapping:
-          warden-ubuntu-trusty-3363-37: stemcell
+          stemcell: warden-ubuntu-trusty-3363-37
 
   - name: finalize-bosh-release
     serial: true
