--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -423,6 +423,10 @@ builds:
     version: 56cd5b874af720289964eee18057f80f90da5091
     blobstore_id: 277697c8-83e3-4194-b5c8-a961cb261b62
     sha1: 3050112f5ece69f51b5d5e407d15939eaf73d376
+  56d5d50910f8960100966d6bbaaef41a69e1e515:
+    version: 56d5d50910f8960100966d6bbaaef41a69e1e515
+    blobstore_id: b79ea1ad-0bac-43a6-6f2c-a13395453fad
+    sha1: f44b98d71616ac0f4007fa8ed5aac7980afe1da2
   5756c7d5c48a1d5b442f7cf6c9b91f1a990eca92:
     version: "32"
     blobstore_id: 5fbfe8af-eae3-47a2-a17c-23559a6d2671
