--- a/releases/index.yml
+++ b/releases/index.yml
@@ -585,6 +585,8 @@ builds:
     version: "193"
   ee8cc10b-5240-4ef0-61cd-e4a8841a0ac9:
     version: "260.3"
+  f13ab9e2-caab-4f76-6659-248b038bd3ca:
+    version: 263.4.0
   f3adf894ee76ef6f5c0f7591abb63eaccf06eeea:
     version: "48"
   f3fbedf7-9e2c-4741-abca-fd0a1f7904ab:
