Use individual load-test workers for each job
Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -431,7 +431,6 @@ jobs:
   - name: load-tests-postgres
     public: true
     serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
     build_logs_to_retain: 250
     plan:
     - { get: load-tests-interval, trigger: true }
@@ -456,7 +455,6 @@ jobs:
   - name: legacy-load-tests-postgres
     public: true
     serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
     build_logs_to_retain: 250
     plan:
     - { get: load-tests-interval, trigger: true }
@@ -468,7 +466,7 @@ jobs:
     - task: test
       privileged: true
       file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
+      tags: ["bosh-load-tests-2"]
       input_mapping:
         bosh-candidate-stemcell: warden-ubuntu-trusty
         bosh-candidate-release: bosh-candidate-release-tarballs
@@ -481,7 +479,6 @@ jobs:
   - name: load-tests-mysql
     public: true
     serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
     build_logs_to_retain: 250
     plan:
     - { get: load-tests-interval, trigger: true }
@@ -493,7 +490,7 @@ jobs:
     - task: test
       privileged: true
       file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
+      tags: ["bosh-load-tests-3"]
       input_mapping:
         bosh-candidate-stemcell: warden-ubuntu-trusty
         bosh-candidate-release: bosh-candidate-release-tarballs
@@ -506,7 +503,6 @@ jobs:
   - name: legacy-load-tests-mysql
     public: true
     serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
     build_logs_to_retain: 250
     plan:
     - { get: load-tests-interval, trigger: true }
@@ -518,7 +514,7 @@ jobs:
     - task: test
       privileged: true
       file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
+      tags: ["bosh-load-tests-4"]
       input_mapping:
         bosh-candidate-stemcell: warden-ubuntu-trusty
         bosh-candidate-release: bosh-candidate-release-tarballs
