--- a/ci/tasks/finalize-bosh-release.yml
+++ b/ci/tasks/finalize-bosh-release.yml
@@ -7,19 +7,21 @@ image_resource:
     repository: bosh/main-ruby-go
 
 inputs:
-  - name: bosh-src-master
+  - name: bosh-src
+  - name: bosh-master
   - name: bosh-dev-release
   - name: bosh-cli
   - name: candidate-version
 
 outputs:
   - name: bumped-candidate-version
-  - name: bosh-src-with-final
-  - name: bosh-src-with-final-tag
+  - name: bosh-src-with-bumped-version
+  - name: bosh-master-with-final
+  - name: bosh-master-with-final-tag
 
 params:
   BLOBSTORE_ACCESS_KEY_ID: replace-me
   BLOBSTORE_SECRET_ACCESS_KEY: replace-me
 
 run:
-  path: bosh-src-master/ci/tasks/finalize-bosh-release.sh
+  path: bosh-src/ci/tasks/finalize-bosh-release.sh
