adds additional rubocop rules
- we want to allow longer block length in tests (hence the
describe and context ignoring)
- upped our method length a bit since 10 felt way to restrictive.

Signed-off-by: Zachary Gershman <zgershman@pivotal.io>

--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -7,3 +7,10 @@ AllCops:
 
 Style/FrozenStringLiteralComment:
   Enabled: false
+
+Metrics/MethodLength:
+  Max: 25
+
+Metrics/BlockLength:
+  Max: 25
+  ExcludedMethods: ['describe', 'context']
